fix theme button label alignment

--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@
   --headerColor: hsl(52, 100%, 62%);
 }
 .calculator {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -89,8 +90,10 @@ body {
 }
 h3 {
   color: var(--headerColor);
+  margin-bottom: 0;
 }
 .Keypad {
+font-size: larger;
   background-color: var(--keypadBackground);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -145,7 +148,7 @@ button {
   width: 300px;
   justify-content: space-between;
   flex-direction: row;
-  margin: 0 auto;
+  margin-bottom: 1rem;
 }
 
 .theme-toggle {
@@ -160,4 +163,11 @@ button {
 
 .theme-option label {
   color: var(--headerColor);
+}
+.themeLabel {
+    margin-top: 1.25rem;
+    margin-right: 0.5rem;;
+  color: var(--headerColor);
+font-weight: bold;
+  font-size: x-small;
 }
